--- a/site/assets/index.css
+++ b/site/assets/index.css
@@ -133,19 +133,19 @@ input {
 }
 
 @media (max-width: 760px) {
-  html { font-size: 1.7vw }
-}
+  html { font-size: 1.9vw }
+  body, .fwn { font-weight: 400 }
+  .fwb, b, strong { font-weight: 700 }
 
-@media (max-width: 760px) {
-  .p0-5 { padding: 0.25rem }
-  .p1 { padding: 0.5rem }
-  .p2 { padding: 1rem }
+  .p1 { padding: 0.75rem }
+  .p2 { padding: 1.5rem }
   .pt1 { padding-top: 0.75rem }
   .px1 { padding-left: 0.5rem; padding-right: 0.5rem; }
   .m0 { margin: 0 }
   .my4 { margin: 1.5rem 0 }
   .mt4 { margin-top: 3rem }
   .mt8 { margin-top: 2rem }
+
 
   .sm-dn { display: none }
   .sm-c12 { width: 100% }
