--- a/site/assets/index.css
+++ b/site/assets/index.css
@@ -4,23 +4,35 @@
   padding: 0;
 }
 
-html { font-size: 13px }
+html {
+  font-size: 16px;
+  font-family: sans-serif;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%
+}
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  line-height: 1.4;
+  font-family: 'UntitledSansTest-Regular', -apple-system, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-font-feature-settings: 'kern';
+  -moz-font-feature-settings: 'kern';
+  -moz-font-feature-settings: 'kern=1';
+  -webkit-font-kerning: normal;
+  -moz-font-kerning: normal;
+  font-feature-settings: 'kern';
+  font-kerning: normal;
   font-size: 1rem;
-  font-weight: 300;
+  font-weight: normal;
+  font-style: normal;
+  letter-spacing: 0em;
+  line-height: 1.5;
 }
 
 a {
   color: #000;
   text-decoration: none;
-}
-
-a:not(.nbb) {
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 0.125em;
 }
 
 .copy { display: block }
@@ -30,6 +42,7 @@ a:not(.nbb) {
 .copy img { max-width: 100% }
 
 .fwb, b, strong { font-weight: 600 }
+.strk { text-decoration: line-through }
 
 .x { display: flex }
 .xw { flex-wrap: wrap }
@@ -48,16 +61,17 @@ a:not(.nbb) {
 .c6 { width: 50% }
 .c8 { width: 66.6% }
 .c12 { width: 100% }
+.xdc { flex-direction: column }
 
-
+.vhmn100 { min-height: 100vh }
 .mh50vh { min-height: 50vh }
 .mh25vh { min-height: 25vh }
-.wmxcopy { max-width: 54rem }
+.wmxcopy { max-width: 30rem }
 .br1 { border-radius: 3px }
 
-.p0-5 { padding: 0.75rem }
-.p1 { padding: 1.5rem }
-.p2 { padding: 3rem }
+.p0-5 { padding: 0.5rem }
+.p1 { padding: 0.75rem }
+.p2 { padding: 1.5rem }
 .px1 { padding-left: 0.75; padding-right: 0.75; }
 .py1 { padding-top: 0.75; padding-left: 0.75; }
 .pt1 { padding-top: 1.5rem }
@@ -65,45 +79,51 @@ a:not(.nbb) {
 .my4 { margin: 3rem 0 }
 .mt4 { margin-top: 3rem }
 .mt8 { margin-top: 4rem }
+.pt2 { padding-top: 2rem }
+.pb4 { padding-bottom: 4rem }
 
+h1, h2, h3 { font-weight: normal }
 h1, .fs3 { font-size: 4rem }
-h2, .fs2 { font-size: 2rem }
-h3, .fs1-5 { font-size: 1.5rem; font-weight: 500 }
+h2 { font-size: 1em; color: #999; }
+h3, .fs1-5 { font-size: 1rem }
 
-.copy h2:not(:first-child) { margin-top: 5rem }
+.fs2 { font-size: 2rem }
+.fs3 { font-size: 3rem }
+.fs4 { font-size: 4rem; letter-spacing: -0.025em }
+.fs6 { font-size: 6rem }
 
-.fs1 { font-size: 1rem }
+.serif { font-family: times; }
 .lh1 { line-height: 1 }
-.lh1-25 { line-height: 1.25 }
-.lh2 { line-height: 2 }
 .tac { text-align: center }
 .ttu { text-transform: uppercase }
 
 ul {
-  padding-left: 3rem;
+  padding-left: 1.5rem;
   list-style: none;
 }
 
 li { position: relative }
-li:not(:last-child) { margin-bottom: 1em }
 
 li:before {
   content: '→';
   position: absolute;
-  top: 0em;
-  left: -3rem;
+  top: 0.1em;
+  left: -1.5rem;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
 
-.ffsans { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif }
-.ffmono { font-family: "SFMono-Light", Consolas, "Liberation Mono", Menlo, Courier, monospace }
-.fwn { font-weight: 300 }
+.ffsans { font-family: 'UntitledSansTest-Regular', -apple-system, sans-serif }
+.ffmono { font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace }
 
+.bggreylight { background: #eee }
 .bgblack { background: #000 }
-.tcwhite { color: #fff }
+.tcwhite, .tcwhite a { color: #fff }
+.tcgrey, .tcgrey a { color: #999 }
+.tcgreydark, .tcgreydark a { color: #333 }
 
 code, pre {
-  font-family: "SFMono-Light", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-  font-weight: 300;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-size: 0.9rem;
 }
 
 pre {
@@ -147,6 +167,8 @@ input {
   .my4 { margin: 1.5rem 0 }
   .mt4 { margin-top: 3rem }
   .mt8 { margin-top: 2rem }
+  .pt2 { padding-top: 2rem }
+  .pb4 { padding-bottom: 4rem }
 
 
   .sm-dn { display: none }
