--- a/site/assets/index.css
+++ b/site/assets/index.css
@@ -170,21 +170,20 @@ li { position: relative }
 .nav-active:before {
   content: '→';
   position: absolute;
-  top: 0.8em;
-  left: -1rem;
-  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  left: -0.75rem;
+  font-family: "Source Code Pro", "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
 
 ul li:before {
   content: '→';
   position: absolute;
-  top: 0.1em;
   left: -1.5rem;
-  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+  font-family: "Source Code Pro", "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
 
 .ffsans { font-family: 'Untitled Sans', -apple-system, sans-serif }
 .ffmono { font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace }
+.ffui { font-family: "Source Code Pro", "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace }
 
 .bgwhite { background: #fff }
 .bggreylight { background: #eee }
@@ -319,6 +318,15 @@ input {
        url('/assets/webfonts/UntitledSansWeb-Regular.woff') format('woff');
 }
 
+@font-face {
+  font-family: 'Source Code Pro';
+  font-weight: normal;
+  font-style: normal;
+  src: url('/assets/webfonts/SourceCodePro-Regular-Arrows.eot'),
+       url('/assets/webfonts/SourceCodePro-Regular-Arrows.woff2') format('woff2'),
+       url('/assets/webfonts/SourceCodePro-Regular-Arrows.woff') format('woff');
+}
+
 @media (max-width: 760px) {
   html { font-size: 1.9vw }
   body, .fwn { font-weight: 400 }
@@ -327,7 +335,7 @@ input {
   .fs4 { line-height: 1.2 }
   code, pre { font-size: 1.8rem }
   .nav-active { padding-left: 3rem }
-  .nav-active:before { left: 1rem; line-height: 0.25 }
+  .nav-active:before { left: 1rem }
   ul { padding-left: 3rem; }
   ul li:before { left: -3rem; }
   .wmxcopy p, .wmxcopy h2, .wmxcopy h3, .wmxcopy table { max-width: 120rem }
