--- a/source/design/index.css
+++ b/source/design/index.css
@@ -61,7 +61,7 @@ header canvas {
 
 footer {
   background: #fff;
-  color: var(--grey25);
+  color: var(--grey50);
   font-family: var(--mono);
   display: flex;
   padding: 2rem 2rem 10rem;
@@ -120,12 +120,15 @@ nav.action-bar > * {
 button {
   background: var(--background);
   color: var(--background);
+  overflow: hidden;
   font-weight: 600;
   padding: 0 6rem;
+  position: relative;
   line-height: 6rem;
   font-size: var(--fs1);
   border-radius: 3rem;
   cursor: pointer;
+  height: 6rem;
   width: auto;
   display: inline-block;
   text-decoration: none;
@@ -133,6 +136,40 @@ button {
   -moz-user-select: none;
   transition: transform 200ms ease-in-out;
   transform: translateY(0);
+  -webkit-appearance: none;
+}
+
+input {
+  font-size: var(--fs1);
+  background: var(--background);
+  color: var(--foreground);
+  height: 6rem;
+  line-height: 6rem;
+  border-radius: 3rem;
+  text-align: center;
+  border: 3px solid var(--yellow);
+}
+
+input[type="email"] {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: opacity 100ms ease-out;
+}
+
+input[type="email"]:hover,
+input[type="email"]:focus {
+  opacity: 1;
+}
+
+input, input:focus {
+  outline: 0;
+}
+
+input:not([value=""]):invalid {
+  border: 3px solid var(--red);
 }
 
 /*
@@ -170,6 +207,25 @@ ul.features {
 
 ul.features > li {
   margin: 1rem 0;
+}
+
+.load {
+  box-sizing: border-box;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  margin: -1rem;
+  text-indent: -9999em;
+  border-top: 3px solid #fff;
+  border-right: 3px solid #fff;
+  border-bottom: 3px solid var(--background);
+  border-left: 3px solid var(--background);
+  animation: load 1s infinite linear;
+}
+
+@keyframes load {
+  0% { transform: rotate(0deg) }
+  100% { transform: rotate(360deg) }
 }
 
 /**
