--- a/source/design/index.css
+++ b/source/design/index.css
@@ -3,6 +3,7 @@
   --background: #1a1a1a;
   --grey25: #ddd;
   --grey50: #999;
+  --grey75: #666;
   --blue: #005FD2;
   --yellow: #F8BE15;
   --green: #00907A;
@@ -60,8 +61,8 @@ header canvas {
 }
 
 footer {
-  background: #fff;
-  color: var(--grey50);
+  background: var(--background);
+  color: var(--grey75);
   font-family: var(--mono);
   display: flex;
   padding: 2rem 2rem 10rem;
@@ -100,6 +101,10 @@ p a {
   color: #fff;
   font-weight: 600;
   text-decoration: none;
+}
+
+p del {
+  color: var(--grey50);
 }
 
 nav.action-bar {
@@ -190,6 +195,24 @@ button:active {
   cursor: default;
 }
 
+section.subtitle {
+  background: #fff;
+  padding: 4rem;
+  text-align: center;
+}
+
+section.subtitle h2 {
+  color: var(--green);
+  font-size: 6.5vw;
+  line-height: 1;
+  margin: 0 auto;
+  max-width: 120rem;
+}
+
+section.subtitle p {
+  line-height: 1.25;
+}
+
 section.features {
   background: var(--blue);
 }
@@ -258,6 +281,10 @@ ul.features > li {
     line-height: 1;
   }
 
+  section.subtitle {
+    padding: 8rem 6rem;
+  }
+
   p a:hover {
     text-decoration: underline;
   }
@@ -270,5 +297,12 @@ ul.features > li {
     opacity: calc(var(--unit) * -0.75  + 1);
     opacity: 1;
     transform: perspective(100vmin) rotate(0.0001deg) rotate3d(calc(var(--unity)), calc(-1 * var(--unitx)), 0, calc(7.5deg * var(--unit))) translate3d(0, 0, calc(25vmin * var(--unit) * -1));
+  }
+}
+
+@media (min-width: 120rem) {
+  section.subtitle h2 {
+    background: red;
+    font-size: 30rem;
   }
 }
