--- a/source/design/index.css
+++ b/source/design/index.css
@@ -23,6 +23,7 @@ html {
 
 body {
   background-color: var(--background);
+  line-height: 1.35;
   font-size: var(--fs1);
   font-family: "lunchtype22regular", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   height: auto;
@@ -63,16 +64,18 @@ header canvas {
 }
 
 footer {
-  background: var(--background);
+  background: var(--foreground);
   color: var(--grey75);
   font-family: var(--mono);
   display: flex;
   padding: 2rem 2rem 10rem;
   font-size: 1.2rem;
-  line-height: 1.5;
   text-transform: uppercase;
   justify-content: space-between;
 }
+
+footer > div:nth-child(1) { text-align: left }
+footer > div:nth-child(2) { text-align: right }
 
 footer a {
   color: var(--grey75);
@@ -86,6 +89,29 @@ h1 {
   font-weight: normal;
   margin-bottom: 1rem;
 }
+
+.colors {
+  display: flex;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0.75rem;
+  z-index: 3;
+}
+
+.colors > div {
+  border-radius: 0.5rem;
+  margin: 0.25rem;
+  height: 1rem;
+  width: 1rem;
+}
+
+.colors > div:nth-child(1) { background: var(--foreground) }
+.colors > div:nth-child(2) { background: var(--background) }
+.colors > div:nth-child(3) { background: var(--blue) }
+.colors > div:nth-child(4) { background: var(--yellow) }
+.colors > div:nth-child(5) { background: var(--green) }
+.colors > div:nth-child(6) { background: var(--red) }
 
 header svg {
   position: relative;
@@ -105,18 +131,15 @@ h3 {
   margin-bottom: 2rem;
 }
 
-p {
-  line-height: 1.35;
-}
+p { }
 
 p a {
-  color: #fff;
-  font-weight: normal;
+  color: var(--green);
   text-decoration: none;
 }
 
 p del {
-  color: var(--grey50);
+  color: rgba(255, 255, 255, 0.5);
   position: relative;
   text-decoration: none;
 }
@@ -133,7 +156,7 @@ p del:after {
 }
 
 nav.action-bar {
-  margin: 1.5rem;
+  margin: 2rem;
   text-align: center;
   position: fixed;
   bottom: 0;
@@ -225,13 +248,13 @@ button:active {
 }
 
 section.subtitle {
-  background: #fff;
+  background: var(--blue);
   padding: 4rem;
   text-align: center;
 }
 
 section.subtitle h2 {
-  color: var(--green);
+  color: #fff;
   font-size: 6.5vw;
   line-height: 1;
   margin: 0 auto;
@@ -243,11 +266,11 @@ section.subtitle p {
 }
 
 section.features {
-  background: var(--blue);
+  background: var(--background);
+  color: var(--grey50);
 }
 
 ul.features {
-  color: #fff;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
   grid-column-gap: 2rem;
@@ -307,7 +330,6 @@ ul.features > li {
 @media (min-width: 767px) {
   footer {
     padding: 4rem;
-    line-height: 1;
   }
 
   section.subtitle {
