--- a/source/design/index.css
+++ b/source/design/index.css
@@ -372,7 +372,9 @@ ul.features > li {
 
 @font-face {
   font-family: 'lunchtype22regular';
-  src: url('/assets/lunchtype22-regular-webfont.woff2') format('woff2'),
+  src: url('/assets/lunchtype22-regular-webfont.eot') format('eot'),
+       url('/assets/lunchtype22-regular-webfont.ttf') format('ttf'),
+       url('/assets/lunchtype22-regular-webfont.woff2') format('woff2'),
        url('/assets/lunchtype22-regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
@@ -380,6 +382,8 @@ ul.features > li {
 
 @font-face {
   font-family: 'lunchtype24expanded_regular';
+  src: url('/assets/lunchtype22-medium-webfont.eot') format('eot'),
+  src: url('/assets/lunchtype22-medium-webfont.ttf') format('ttf'),
   src: url('/assets/lunchtype22-medium-webfont.woff2') format('woff2'),
        url('/assets/lunchtype22-medium-webfont.woff') format('woff');
   font-weight: normal;
