--- a/source/design/index.css
+++ b/source/design/index.css
@@ -154,7 +154,7 @@ p del:after {
 }
 
 nav.action-bar {
-  margin: 2rem;
+  margin: 2.5rem;
   text-align: center;
   position: fixed;
   bottom: 0;
@@ -176,7 +176,7 @@ button {
   font-weight: normal;
   padding: 0 6rem;
   position: relative;
-  line-height: 6rem;
+  line-height: 5.6rem;
   font-size: var(--fs1);
   border-radius: 3rem;
   cursor: pointer;
@@ -200,18 +200,18 @@ input {
   line-height: 6rem;
   border-radius: 3rem;
   text-align: center;
-  border: 3px solid var(--blue);
 }
 
 input[type="email"] {
   background: var(--foreground);
   color: var(--background);
+  border: 0.2rem solid var(--background);
   opacity: 0;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: -0.2rem;
+  left: -0.2rem;
   z-index: 2;
-  width: 100%;
+  width: calc(100% + 0.4rem);
   transition: opacity 100ms ease-out, transform 100ms ease;
 }
 
@@ -235,14 +235,13 @@ input:not([value=""]):invalid {
 }
 
 button[type="submit"] {
-  background: var(--blue);
-  padding: 0 2rem 0 4rem;
+  padding: 0 2rem 0 6rem;
   display: block;
   font-family: var(--expanded);
   position: absolute;
-  top: 0;
+  top: -0.2rem;
   right: 0;
-  z-index: 1;
+  z-index: -1;
   opacity: 0;
   transition: opacity 100ms ease-out, transform 100ms ease;
 }
@@ -267,7 +266,9 @@ button:active {
 */
 
 .button.get-started {
-  background: var(--blue);
+  background: var(--foreground);
+  border: 0.2rem solid var(--background);
+  color: var(--background);
   cursor: default;
 }
 
